# wigners

./: .gitignore  Cargo.toml  LICENSE-MIT  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test_vs_sympy.py
.github/workflows/: build-wheels.yml  tests.yml
benchmarks/: CMakeLists.txt  Cargo.toml  build.rs  sympy-bench.py  wigner-symbol-0382.cpp  wigner-symbol.jl
benchmarks/benches/: wigner-symbols.rs  wigner.rs  wigners.rs  wigxjpf.rs  ws0382.rs
benchmarks/src/: lib.rs
python/build-wheels/: Dockerfile
python/scripts/rustc-manylinux2014_aarch64/: Dockerfile
python/scripts/rustc-manylinux2014_x86_64/: Dockerfile
python/tests/: wigner.py
python/wigners/: __init__.py
src/: lib.rs  primes.rs  rational.rs  real.rs  wigner_3j.rs
