[metadata]
name = wigners
long_description = file: README.md
long_description_content_type = text/markdown

; license_files =
; author =
; author_email =
; description =
; keywords =
; url =
; classifiers =

[options]
zip_safe = False
packages = find:
package_dir =
    = python

[options.packages.find]
where = python

[bdist_wheel]
universal = 1
