[metadata]
name = wigners
long_description = file: README.md
long_description_content_type = text/markdown

author = Guillaume Fraux
author_email = guillaume.fraux@epfl.ch
description = Compute Wigner 3j and Clebsch-Gordan coefficients
url = https://github.com/Luthaf/wigners
license_files =
    LICENSE-MIT
    LICENSE-APACHE
keywords =
    clebsch-gordan
    wigner
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
package_dir =
    = python
install_requires =
    numpy


[options.packages.find]
where = python
