[package]
name = "wigner-benchmarks"
version = "0.0.0"
edition = "2018"
publish = false

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
criterion = "0.3"
wigners = {path = ".."}
wigner-symbols = "0.5"

[[bench]]
name = "wigners"
harness = false

[[bench]]
name = "wigner-symbols"
harness = false

[[bench]]
name = "wigxjpf"
harness = false
